# codegraph-mcp

./: .gitignore  README.md  conftest.py  demo.py  pyproject.toml
bench/: benchmark.py
codegraph/: __init__.py  audit.py  cli.py  crosslang.py  diff.py  graph.py  http_server.py  indexer.py  mcp_server.py  tokens.py  viz.py
codegraph/extractors/: __init__.py  base.py  python_ext.py  regex_ext.py
demos/: 01_ai_agent_workflow.py  02_cross_language.py  03_impact_and_refactor.py  04_audit_and_compliance.py  05_visualize_graph.py  06_mcp_protocol.py  07_scoped_tokens.py  08_graph_diff.py  09_incremental_index.py  10_http_transport.py  11_find_references.py  12_audit_export.py  13_impact_visual.py  14_endpoint_inventory.py  15_benchmark_recall.py  16_agent_safe_edit.py  17_dead_code_report.py  18_polyglot_symbols.py  19_tamper_forensics.py  20_module_architecture.py  _common.py  run_all.py
docs/: ARCHITECTURE.md  DEMOS.md
examples/sample_repo/api/: service.py
examples/sample_repo/dotnet/: UsersController.cs
examples/sample_repo/jvm/: UserController.java
examples/sample_repo/server/: main.go
tests/: test_audit.py  test_audit_extra.py  test_benchmark.py  test_benchmark_extra.py  test_cli.py  test_crosslang.py  test_diff.py  test_diff_extra.py  test_extractors.py  test_extractors_edge.py  test_graph_store.py  test_http_server.py  test_http_server_extra.py  test_incremental.py  test_indexer.py  test_indexer_errors.py  test_mcp_server.py  test_mcp_server_extra.py  test_package.py  test_tokens.py  test_tokens_extra.py  test_viz.py  test_viz_extra.py
(+2 files in other folders)
